--- a/app/src/main/res/layout/fragment_recipes_list.xml
+++ b/app/src/main/res/layout/fragment_recipes_list.xml
@@ -27,7 +27,7 @@
             android:id="@+id/searchRecipe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/grey"/>
+            android:textColor="@color/white"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
