--- a/app/src/main/res/layout/fragment_recipes_list.xml
+++ b/app/src/main/res/layout/fragment_recipes_list.xml
@@ -1,42 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.RecipesListFragment"
-    android:background="#302E2E">
+    android:background="#302E2E"
+    android:orientation="vertical"
+    tools:context=".presentation.RecipesListFragment">
 
-    <com.google.android.material.textfield.TextInputLayout
+    <SearchView
+        android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:startIconDrawable="@drawable/search"
-        app:boxBackgroundColor="#7A7878"
-        android:textColorHint="#D8CDCD"
-        android:hint="@string/search_recipes"
+        android:iconifiedByDefault="false"
+        android:inputType="textAutoCorrect|textAutoComplete"
+        android:queryHint="@string/search_recipes"
+        android:background="@drawable/rounded"
         android:layout_margin="5dp"
-        app:boxCornerRadiusBottomEnd="@dimen/box_corner"
-        app:boxCornerRadiusBottomStart="@dimen/box_corner"
-        app:boxCornerRadiusTopStart="@dimen/box_corner"
-        app:boxCornerRadiusTopEnd="@dimen/box_corner"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp">
+        />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/searchRecipe"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recipesRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
-        tools:listitem="@layout/recipe_item"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/recipe_item" />
 
 </LinearLayout>
