--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#3C3A3A"/>
+    <solid android:color="@color/grey"/>
     <corners android:radius="15dp"/>
     <padding android:left="15dp"
         android:bottom="15dp"
