--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -1,40 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="350dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
+    app:cardBackgroundColor="@color/grey"
     app:cardCornerRadius="15dp">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/ivRecipe"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            tools:src="@tools:sample/backgrounds/scenic" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintHorizontal_weight="0.5" />
+
+            <ImageView
+                android:id="@+id/ivRecipe"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:contentDescription="@string/recipe_image"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="8dp"
+                tools:src="@tools:sample/backgrounds/scenic" />
 
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_start"
-                android:layout_marginTop="224dp"
+                android:layout_marginTop="7dp"
                 android:fontFamily="@font/the_students_teacher_regular"
-                android:textColor="@android:color/white"
+                android:textAppearance="?attr/textAppearanceBody2"
                 android:textSize="@dimen/list_title_recipe"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ivRecipe"
                 tools:text="Pasta" />
+
+            <ImageButton
+                android:id="@+id/btnArrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:background="?android:selectableItemBackground"
+                android:src="@drawable/arrow_more"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.95"
+                app:layout_constraintStart_toEndOf="@+id/tvTitle"
+                app:layout_constraintTop_toBottomOf="@+id/ivRecipe" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/invisibleContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/tvReadyInMinutes"
@@ -42,11 +77,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_start"
                 android:fontFamily="@font/the_students_teacher_regular"
-                android:textColor="@color/white"
                 android:textSize="@dimen/description_size"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-                tools:text="@string/app_name" />
+                app:layout_constraintTop_toTopOf="@+id/invisibleContainer"
+                tools:text="5 min" />
 
             <TextView
                 android:id="@+id/tvServingsLabel"
@@ -55,7 +89,6 @@
                 android:layout_marginStart="@dimen/margin_start"
                 android:fontFamily="@font/the_students_teacher_regular"
                 android:text="@string/servings"
-                android:textColor="@color/white"
                 android:textSize="@dimen/description_size"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvReadyInMinutes" />
@@ -65,13 +98,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:textColor="@color/white"
-                android:textSize="@dimen/description_size"
+
                 android:fontFamily="@font/the_students_teacher_regular"
+                android:textSize="@dimen/description_size"
                 app:layout_constraintStart_toEndOf="@+id/tvServingsLabel"
                 app:layout_constraintTop_toBottomOf="@+id/tvReadyInMinutes" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
+    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+
+</com.google.android.material.card.MaterialCardView>
