--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -59,10 +59,12 @@
                 android:layout_marginTop="7dp"
                 android:background="?android:selectableItemBackground"
                 android:src="@drawable/arrow_more"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/container"
                 app:layout_constraintHorizontal_bias="0.95"
                 app:layout_constraintStart_toEndOf="@+id/tvTitle"
-                app:layout_constraintTop_toBottomOf="@+id/ivRecipe" />
+                app:layout_constraintTop_toBottomOf="@+id/ivRecipe"
+                app:layout_constraintBottom_toBottomOf="@+id/container"
+                android:contentDescription="@string/show_description" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
