--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="grey">#EAE7E7</color>
     <color name="dark_grey">#201E1E</color>
     <color name="turquoise">#014E3C</color>
+    <color name="peach">#EFC699</color>
+    <color name="read">#C30000</color>
 </resources>
