--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Recipe" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Recipe" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#333232</item>
         <item name="colorPrimaryVariant">#272727</item>
