--- a/app/src/main/res/layout/fragment_recipes_list.xml
+++ b/app/src/main/res/layout/fragment_recipes_list.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/margin_start_top"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/lato_light"
             android:text="@string/cook_today"
@@ -29,7 +29,7 @@
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/margin_start_top"
             android:background="@drawable/rounded_grey"
             android:iconifiedByDefault="false"
             android:inputType="textAutoCorrect|textAutoComplete"
@@ -38,7 +38,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/margin_start_top"
             android:layout_marginTop="100dp"
             android:layout_marginBottom="4dp"
             android:fontFamily="@font/lato_light"
