--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -5,9 +5,9 @@
     android:id="@+id/cardView"
     android:layout_width="200dp"
     android:layout_height="250dp"
-    android:layout_marginStart="10dp"
+    android:layout_marginStart="@dimen/margin_start_top"
     app:cardBackgroundColor="@color/grey"
-    app:cardCornerRadius="15dp">
+    app:cardCornerRadius="@dimen/corner_radius">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container"
@@ -31,7 +31,7 @@
                 android:id="@+id/tvTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_start"
+                android:layout_marginStart="@dimen/margin_start_top"
                 android:layout_marginTop="7dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/lato_light"
