--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="dark_grey">#201E1E</color>
     <color name="turquoise">#014E3C</color>
     <color name="peach">#EFC699</color>
-    <color name="read">#C30000</color>
+    <color name="red">#C30000</color>
 </resources>
