--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="box_corner">20dp</dimen>
     <dimen name="list_title_recipe">13sp</dimen>
     <dimen name="margin_start_top">10dp</dimen>
+    <dimen name="top_for_icons">25dp</dimen>
     <dimen name="corner_radius">15dp</dimen>
     <dimen name="start_end">70dp</dimen>
     <dimen name="start_end1">65dp</dimen>
