--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -203,13 +203,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
         android:fontFamily="@font/lato_light"
         android:text="@string/ingredients"
         android:textColor="@color/black"
+        android:layout_marginBottom="@dimen/margin_start_top"
         android:textSize="@dimen/title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvEquipment" />
+        app:layout_constraintBottom_toTopOf="@+id/rvIngredients"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvIngredients"
@@ -218,8 +218,7 @@
         android:layout_margin="@dimen/margin_start_top"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/ingredients"
-        tools:layout_editor_absoluteX="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         tools:listitem="@layout/ingredient_item" />
 
     <TextView
@@ -242,11 +241,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/ingredients"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
+        android:id="@+id/button"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
