--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -44,7 +44,7 @@
         android:textSize="8sp"/>
 
     <TextView
-        android:id="@+id/unit"
+        android:id="@+id/tvUnit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_light"
