--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,17 @@
         <argument
             android:name="id"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_recipeDetailFragment_to_stepFragment"
+            app:destination="@id/stepFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/stepFragment"
+        android:name="com.android.recipe.presentation.StepFragment"
+        android:label="fragment_step"
+        tools:layout="@layout/fragment_step" >
+        <argument
+            android:name="recipeId"
+            app:argType="integer" />
     </fragment>
 </navigation>
